# adventofcode2022

./: .gitignore  Cargo.toml  pyproject.toml
py/: day16.py  day17.py  day18.py  lib.py
src/: lib.rs
