[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = ""
authors = ["Colin J. Fuller <colin@cjf.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11"
networkx = "^2.8.8"

[tool.poetry.dev-dependencies]
ruff = "^0.0.183"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
